# master_thesis

./: .dockerignore  .gitignore  Dockerfile  README.md  build_container.sh  common_scripts.sh  install-ngsuite.sh  requirements.txt  run_container.sh  update_figures.sh
dealII/: CMakeList.txt  Dockerfile  run_container.sh
dealii/: CMakeLists.txt  Dockerfile  build_container.sh
dealii/src/: biharmonic_example.cc  laplace_problem.cc
dockerfiles/: Dockerfile-julia  Dockerfile-latex
gridap/: gridap_notebook.ipynb
julia/: .gitignore  BoundaryTriangulation.vtu  DG_biharmonic.jl  DG_brenner.jl  DG_poission.jl  Triangulation.vtu  biharmonic_equation.jl  biharmonic_julia_test.jl  biharmonic_mwe_andre.jl  cahn_hilliard.jl  field.vtu  generate_table.jl  jumps.vtu  main.jl  minimal.jl  model_3.vtu  model_mesh_0.vtu  model_mesh_1.vtu  model_mesh_2.vtu  plot_models.jl  run_tests.jl  strian.vtu  strian_cube.vtu
latex/: .gitignore  CIP.tex  DG-poisson.tex  Dockerfile  appendix.tex  bibliography.bib  biharmonic-equation.tex  cahn-hilliard.tex  ch1.tex  construction_IP.tex  introduction.tex  isaks_template.sty  main.tex  numerical_results.tex
master_thesis/: notes.md
ngsolve/: DG_biharmonic.py  DG_poission.py  Dockerfile  HDG_biharmonic.py  common_scripts.sh  example.py  experiment.ipynb  fourthorder.ipynb  requirements.txt  run_container.sh  surfacehdg.ipynb
notes/: .gitignore  10.12.2022.md  14nov.md  15nov.md  16nov.md  19nov.md  1des.md  21-12-22.md  22-11-14.md  22-11-15.md  22-11-19.md  22-11-22.md  22-11-29.md  22-12-01.md  22-12-02  22-12-02.md  22-12-06.md  (+8 more)
(+1410 files in other folders)
